# Exponential_Networks_cpp

./: .bazelrc  .clang-tidy  .gitignore  F_2_3.py  F_fig_8.py  MODULE.bazel  README.md  WORKSPACE.bazel  analyze.py  calculator.py  combinatorics.py  cone.py  cone2.py  debug.py  execute_clang-tidy.sh  extra.py  flake.nix  flake.nixx  interlog.txt  local.py  matrices.py  requirements.txt  resolution.py  sandbox.py  surgery.py  util.sh
.devenv/: profile
data/intersection_data/: test.csv  unsuccessful_0.csv
data/path_data/: path_data_0.csv  path_data_1.csv  path_data_10.csv  path_data_11.csv  path_data_12.csv  path_data_13.csv  path_data_14.csv  path_data_15.csv  path_data_16.csv  path_data_17.csv  path_data_18.csv  path_data_19.csv  path_data_2.csv  path_data_21.csv  path_data_22.csv  path_data_24.csv  path_data_27.csv  path_data_28.csv  path_data_29.csv  path_data_3.csv  path_data_31.csv  path_data_32.csv  path_data_34.csv  path_data_4.csv  path_data_5.csv  path_data_6.csv  path_data_7.csv  path_data_8.csv  path_data_9.csv
graphics/: remarks.md
graphics/1_1_2_network_obstructed/: plot_script.py
graphics/1_2_1_partition_ghost/: adhm.cpp  plot_script.py
graphics/1_partition/: plot_script.py
graphics/1_partition_deformed/: adhm.cpp  plot_script.py
graphics/1_partition_wallcrossing/: adhm.cpp  plot_script.py
graphics/1_partition_wallcrossing_minus/: plot_script.py
graphics/2_1_deformed_transition/: plot_script.py
graphics/2_1_partition/: plot_script.py
graphics/2_1_partition_deformed/: plot_script.py
graphics/2_2_partition/: plot_script.py
graphics/2_2_partition_ghosts/: adhm.cpp  plot_script.py
graphics/2_2_partition_ghosts_2/: adhm.cpp  plot_script.py
graphics/2_part_sym_transition/: adhm.cpp  plot_script.py
graphics/2_part_sym_transition_C/: adhm.cpp  plot_script.py
graphics/2_partition/: plot_script.py
graphics/2_partition_P1/: adhm.cpp  plot_script.py
graphics/2_partition_deformed/: adhm.cpp  plot_script.py
graphics/2_partition_generic/: plot_script.py
graphics/2_partition_half_way/: adhm.cpp  plot_script.py
graphics/2_partition_sym/: adhm.cpp  plot_script.py
graphics/2_partition_wallcrossing/: adhm.cpp  plot_script.py
graphics/2_partition_wallcrossing_minus/: adhm.cpp  plot_script.py
graphics/3_1_part_2_2_part_transition/: adhm.cpp  plot_script.py
graphics/3_1_partition/: plot_script.py
graphics/3_1_partition_ghosts/: plot_script.py
graphics/3_2_1_partition/: plot_script.py
graphics/3_2_partition/: plot_script.py
graphics/3_3_partition/: plot_script.py
graphics/3_eadhm_ghost/: adhm.cpp  plot_script.py
graphics/3_eadhm_non_module/: adhm.cpp  plot_script.py
graphics/3_part_2_1_part_transition/: adhm.cpp  plot_script.py
graphics/3_partition/: plot_script.py
graphics/3_partition_deformed/: plot_script.py
graphics/3_partition_deformed_1_transit/: plot_script.py
graphics/3_partition_deformed_2_transit/: plot_script.py
graphics/3_partition_ghost/: adhm.cpp  plot_script.py
graphics/3_partition_ghost/2_partition_ghost/: adhm.cpp  plot_script.py
graphics/3_partition_interpolation/: adhm.cpp  plot_script.py
graphics/3_partition_interpolation_B/: adhm.cpp  plot_script.py
graphics/3_partition_wallcrossing/: adhm.cpp  plot_script.py
graphics/3_partition_wallcrossing_minus/: adhm.cpp  plot_script.py
graphics/4_1_1_partition/: adhm.cpp  plot_script.py
graphics/4_1_1_partition_alternative_topology/: adhm.cpp  plot_script.py
graphics/4_1_partition/: plot_script.py
graphics/4_2_1_1_partition/: adhm.cpp  plot_script.py
graphics/4_2_2_partition/: adhm.cpp  plot_script.py
graphics/4_2_partition/: plot_script.py
graphics/4_3_3_1_partition/: adhm.cpp  plot_script.py
graphics/4_4_1_1_partition/: adhm.cpp  plot_script.py
graphics/4_4_2_1_partition/: adhm.cpp  plot_script.py
graphics/4_part_3_1_part_transition/: adhm.cpp  plot_script.py
graphics/4_partition/: plot_script.py
graphics/4_partition_ghost/: adhm.cpp  plot_script.py
graphics/4_partition_ghost_ghost/: adhm.cpp  plot_script.py
graphics/4_partition_ghost_inner/: adhm.cpp  plot_script.py
graphics/5_1_partition/: plot_script.py
graphics/5_3_1_partition/: adhm.cpp  plot_script.py
graphics/5_3_2_1_partition/: adhm.cpp  plot_script.py
graphics/5_partition/: plot_script.py
graphics/6_partition/: plot_script.py
graphics/D0/: plot_script.py
graphics/D0-D4_central_charge_check/: plot_script.py
graphics/D4/: plot_script.py
graphics/D4-2D0/: plot_script.py
graphics/Elliptic_test/: plot_script.py
graphics/Trifoil_test/: plot_script.py
graphics/coni/5_2_D0s/: coni.cpp  plot_script.py
graphics/coni/Coni_test/: plot_script.py
graphics/coni/D0/: plot_script.py
graphics/coni/Trefoil_anti_D2/: coni.cpp  plot_script.py
graphics/coni/Trefoil_anti_D2_cycle_1/: coni.cpp  plot_script.py
graphics/coni/Trefoil_anti_D2_cycle_2/: coni.cpp  plot_script.py
graphics/coni/Trefoil_anti_D2_cycle_3/: coni.cpp  plot_script.py
graphics/coni/Trefoil_at_angle/: plot_script.py
graphics/coni/Trefoil_at_zero/: plot_script.py
graphics/coni/Trefoil_new/: plot_script.py
graphics/coni/coni_test/: plot_script.py
graphics/coni/trefoil_D2/: coni.cpp  plot_script.py
graphics/coni/trefoil_D2_fan/: coni.cpp  (+1 more)
graphics/deformed_D0/: plot_script.py
graphics/fans/: plot_script.py
graphics/fully_generic/: adhm.cpp  plot_script.py
graphics/n=2_full/: plot_script.py
graphics/other_surgery/: plot_script.py
graphics/random_stuff/: adhm.cpp  plot_script.py
graphics/vary_x/: adhm.cpp  plot_script.py
graphics/wallcrossing/: plot_script.py
include/: arb.BUILD  flint.BUILD
networks/: BUILD.bazel  adhm.cpp  adhm.hpp  arb_util.cpp  arb_util.hpp  coni.cpp  coni.hpp  coni_main.cpp  elliptic.cpp  elliptic.hpp  files.hpp  format_util.cpp  format_util.hpp  ginac_util.cpp  ginac_util.hpp  local.cpp  local.hpp  local_main.cpp  magic_numbers.h  maps.cpp  maps.hpp  nets.cpp  nets.hpp  networks.cpp  ode_integrator.cpp  ode_integrator.hpp  path.cpp  path.hpp  profiles.cpp  sw_curve.cpp  sw_curve.hpp  test.cpp  type_util.cpp  type_util.hpp
(+1809 files in other folders)
