load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_import")

cc_library(
    name = "util",
    srcs = [
        "type_util.cpp",
    ],
    hdrs = [
        "type_util.hpp",
        "magic_numbers.h",
        "files.hpp",
    ],
    copts= [
        "-std=c++20",
        "-O3",
    ],
    deps = [
        "@spdlog",
    ]
)

cc_library(
    name = "adhm",
    srcs = [
        "adhm.cpp",
    ],
    hdrs = [
        "adhm.hpp",
    ],
    copts = [
        "-std=c++20",
        "-O3",
    ],
    deps = [
        ":maps",
        ":path",
        ":sw_curve",
        ":util",
        "@eigen_archive//:eigen",
        "@spdlog",
    ]
)

cc_library(
    name = "sw_curve",
    srcs = [
        "sw_curve.cpp", 
        "ginac_util.cpp",
    ],
    hdrs = [
        "type_util.hpp",
        "sw_curve.hpp",
        "ginac_util.hpp",
        "magic_numbers.h",
        ],
    copts= [
        "-std=c++20",
        "-O3",
    ],
    deps = [
        "@spdlog",
    ],
)

cc_library(
    name = "path",
    srcs = [
        "path.cpp", 
    ],
    hdrs = [
        "type_util.hpp",
        "path.hpp",
        "sw_curve.hpp",
        "magic_numbers.h",
        "ode_integrator.hpp",
        ],
    copts= [
        "-std=c++20",
        "-O3",
    ],
    deps = [
        ":util",
        ":ode_integrator",
        ":sw_curve",
        "@spdlog",
    ],
)

cc_library(
    name = "ode_integrator",
    srcs = [
        "ode_integrator.cpp",
    ],
    hdrs = [
        "type_util.hpp",
        "ode_integrator.hpp",
        "sw_curve.hpp",
        "magic_numbers.h",
    ],
    copts= [
        "-std=c++20",
        "-O3",
    ],
    deps = [
        ":sw_curve",
    ]
)

cc_library(
  name = "maps",
  srcs = [
      "maps.cpp",
  ],
  hdrs = [
      "maps.hpp",
      "type_util.hpp",
      "magic_numbers.h",
  ],
  copts = [
      "-std=c++20",
      "-O3",
    ],
    deps = [
        ":path",
        ":util",
        "@spdlog",
    ]
)

cc_library(
    name = "nets",
    srcs = [
        "nets.cpp",
    ],
    hdrs = [
        "ode_integrator.hpp",
        "nets.hpp",
        "sw_curve.hpp",
        "maps.hpp",
        "path.hpp",
        "type_util.hpp",
        "magic_numbers.h",
    ],
    copts = [
        "-std=c++20",
        "-O3",
    ],
    deps = [
        ":maps",
        ":path",
        ":sw_curve",
        ":util",
        "@eigen_archive//:eigen",
        "@spdlog",
    ]
)

cc_binary(
    name = "networks",
    srcs = [
        "networks.cpp",
    ],
    copts= [
        "-std=c++20",
        "-O3",
    ],
    linkopts = [
        "-lginac",
        "-lcln",
    ],
    deps = [
        ":maps",
        # ":nets",
        ":util",
        ":path",
        ":adhm",
        ":ode_integrator",
        ":sw_curve",
        "@spdlog",
    ],
)



